--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/m6xcom/goit-js-hw-13-image-finder/issues"
   },
-  "homepage": "https://github.com/m6xcom/goit-js-hw-13-image-finder#readme",
+  "homepage": "https://github.com/m6xcom/goit-js-hw-13-image-finder",
   "devDependencies": {
     "@babel/core": "^7.12.8",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
