--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-env": "^7.12.7",
     "autoprefixer": "^10.0.2",
     "babel-loader": "^8.2.1",
+    "basiclightbox": "^5.0.3",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
@@ -37,6 +38,7 @@
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "pnotify": "^5.2.0",
     "postcss": "^8.1.10",
     "postcss-loader": "^4.1.0",
     "style-loader": "^2.0.0",
