--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "gh-pages": "^3.1.0",
+    "intersection-observer": "^0.12.0",
     "material-design-icons": "^3.0.1",
     "pixabay-api": "^1.0.4",
     "webpack": "^4.44.1",
